--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "search-robots",
   "version": "0.1.0",
-  "private": true,
+  "private": true, 
+  "homepage": "https://github.com/Amr-khaled-eg/robo",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
@@ -18,7 +19,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy" :"npm run build",
+    "deploy":"gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
